correct unclosed tag

--- a/layouts/partials/sections/about.html
+++ b/layouts/partials/sections/about.html
@@ -22,6 +22,8 @@
             .company.name }}</a>
           {{ end }}
         </h5>
+        {{ end }}
+
         {{ if .designation2 }}
         <h5 class="p-1">
           {{ .designation2 }}
