--- a/layouts/categories/list.html
+++ b/layouts/categories/list.html
@@ -1,31 +1,32 @@
 {{ define "navbar" }}
-    {{ partial "navigators/navbar.html" . }}
+{{ partial "navigators/navbar.html" . }}
 {{ end }}
 
 {{ define "sidebar" }}
-  {{ $homePage:="#" }}
-  {{ if site.IsMultiLingual }}
-    {{ $homePage = (path.Join (cond ( eq .Language.Lang "en") "" .Language.Lang) .Type) }}
-  {{ end }}
+{{ $homePage:="#" }}
+{{ if site.IsMultiLingual }}
+{{ $homePage = (path.Join (cond ( eq .Language.Lang "en") "" .Language.Lang) .Type) }}
+{{ end }}
 
-  <section class="sidebar-section" id="sidebar-section">
-    <div class="sidebar-holder">
-      <div class="sidebar" id="sidebar">
-        <form class="mx-auto" method="get" action="{{ "search" | relLangURL }}">
-          <input type="text" name="keyword" value="" placeholder="{{ i18n "search" }}" data-search="" id="search-box" />
-        </form>
-        <div class="sidebar-tree">
-          <ul class="tree" id="tree">
-            <li id="list-heading"><a href="{{ .Type | relLangURL }}" data-filter="all">{{ i18n .Type }}</a></li>
-            <div class="subtree taxonomy-terms">
-              {{ $context := . }}
-              {{ partial "navigators/taxonomies.html" (dict "context" $context "taxo" "categories" "title" ( humanize "categories" ) ) }}
-            </div>
-          </ul>
-        </div>
+<section class="sidebar-section" id="sidebar-section">
+  <div class="sidebar-holder">
+    <div class="sidebar" id="sidebar">
+      <form class="mx-auto" method="get" action="{{ " search" | relLangURL }}">
+        <input type="text" name="keyword" value="" placeholder="{{ i18n " search" }}" data-search="" id="search-box" />
+      </form>
+      <div class="sidebar-tree">
+        <ul class="tree" id="tree">
+          <li id="list-heading"><a href="{{ .Type | relLangURL }}" data-filter="all">{{ i18n .Type }}</a></li>
+          <div class="subtree taxonomy-terms">
+            {{ $context := . }}
+            {{ partial "navigators/taxonomies.html" (dict "context" $context "taxo" "categories" "title" ( humanize
+            "categories" ) ) }}
+          </div>
+        </ul>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 {{ end }}
 
 {{ define "content" }}
@@ -33,13 +34,13 @@
   <div class="content container-fluid" id="content">
     <div class="container-fluid post-card-holder" id="post-card-holder">
       {{ $posts := where .RegularPagesRecursive "Layout" "!=" "search" }}
-      {{ $paginator := .Paginate $posts 12 }}
+      {{ $paginator := .Paginate $posts 20}}
       {{ range $paginator.Pages }}
-        {{ if .Layout }}
-          {{/* ignore the search.md file*/}}
-        {{ else }}
-          {{ partial "cards/post.html" . }}
-        {{ end }}
+      {{ if .Layout }}
+      {{/* ignore the search.md file*/}}
+      {{ else }}
+      {{ partial "cards/post.html" . }}
+      {{ end }}
       {{ end }}
     </div>
     <div class="paginator">
