--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -37,8 +37,10 @@
       <!--Content Start-->
       <div class="page-content">
         <div class="author-profile ml-auto align-self-lg-center">
-          <img class="rounded-circle" src='{{ partial "helpers/get-author-image.html" . }}' alt="Author Image">
-          <h5 class="author-name">{{ partial "helpers/get-author-name.html" . }}</h5>
+          {{ if not Params.hide_author }}
+            <img class="rounded-circle" src='{{ partial "helpers/get-author-image.html" . }}' alt="Author Image">
+            <h5 class="author-name">{{ partial "helpers/get-author-name.html" . }}</h5>
+          {{ end }}
           <p class="text-muted">{{ .Page.Date | time.Format ":date_full" }}{{ if site.Params.features.readingTime }} | {{ .ReadingTime }} {{i18n "minute" .ReadingTime }}{{ end }}</p>
         </div>
 
