--- a/layouts/partials/sections/about.html
+++ b/layouts/partials/sections/about.html
@@ -18,7 +18,9 @@
       <h5 class="p-1">
         {{ .designation }}
         {{ if .company }}
-        {{ i18n "at"}} <a href="{{ .company.url }}" title="{{ .company.name }}" target="_blank" rel="noopener">{{ .company.name }}</a>
+          {{ i18n "at"}} <a href="{{ .company.url }}" title="{{ .company.name }}" target="_blank" rel="noopener">{{
+            .company.name }}</a>
+          {{ end }}
       </h5>
         {{ end }}
         
